--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,7 @@
-<html>
+<% provide(:title, "Home") %>
 <h1>Sample App</h1>
-<head>
-  <title>Home | Ruby on Rails Tutorial Sample App</title>
-</head>
-<body>
-  <p>
-    This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </p>
-</body>
-</html>
+<p>
+This is the home page for the
+<a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+sample application.
+</p>
