--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,8 +5,8 @@
       <div>by <a href="http://www.michaelhartl.com/">Michael Hartl</a></div>
     </div>
     <div class="footer_right">
-      <div><%= link_to "About",   '#' %></div>
-      <div style="margin: 0px 20px 0px 20px"><%= link_to "Contact", '#' %></div>
+      <div><%= link_to "About", about_path  %></div>
+      <div style="margin: 0px 20px 0px 20px"><%= link_to "Contact", contact_path %></div>
       <div style="padding-right: 20px"><a href="http://news.railstutorial.org/">News</a></div>
     </div>
   </div>
