--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,7 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 /* universal */
-
+.wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 section {
     overflow: auto;
 }
