--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,8 @@
 	      <%= render 'layouts/footer' %>
       </div>
     </div>
+    <div>
+      <%= debug(params) if Rails.env.development? %>
+    </div>
   </body>
 </html>
