--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,6 +12,11 @@
     flex-direction: column;
     justify-content: space-between;
 }
+.content {
+    p {
+        text-align: center;
+    }
+}
 section {
     overflow: auto;
 }
