--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,13 @@
   </head>
   <body>
 	  <div class="wrapper">
-		  <div class="header">
-			  <%= render 'layouts/header' %>
-		  </div>
-      <div class="container">
-        <%= yield %>
+      <div class="header_content_wrapper">
+  		  <div class="header">
+  			  <%= render 'layouts/header' %>
+  		  </div>
+        <div class="content">
+          <%= yield %>
+        </div>
       </div>
       <div class="footer">
 	      <%= render 'layouts/footer' %>
